force-app/main/default/objects/NAM__c/fields/RevisionCO2__c.field-meta.xml
<CustomField>
    <fullName>RevisionCO2__c</fullName>
    <formula>IF(
    AND (
        RevisionCO__c = 0,
        NOT(ISPICKVAL(Status__c, &apos;Approved&apos;))
        ),
    null,
    RevisionCO__c
)</formula>
    <label>Revision CO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>