force-app/main/default/objects/NAM__c/fields/RevisionCO__c.field-meta.xml
<CustomField>
    <fullName>RevisionCO__c</fullName>
    <label>Revision CO</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>