force-app/main/default/objects/NAM__c/fields/RiskRantingText__c.field-meta.xml
<CustomField>
    <fullName>RiskRantingText__c</fullName>
    <formula>CASE(ColorRating__c, &apos;green&apos;, &apos;Low&apos;, &apos;yellow&apos;, &apos;Mid&apos;, &apos;red&apos;, &apos;High&apos;, &apos;---&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Risk Ranting Text</label>
    <type>Text</type>
</CustomField>