force-app/main/default/objects/NAM__c/fields/RootCause__c.field-meta.xml
<CustomField>
    <fullName>RootCause__c</fullName>
    <label>Root Cause</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>