force-app/main/default/objects/NAM__c/fields/RootCauseCategory__c.field-meta.xml
<CustomField>
    <fullName>RootCauseCategory__c</fullName>
    <label>Root Cause Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Commissioning</fullName>
            </value>
            <value>
                <fullName>Construction</fullName>
            </value>
            <value>
                <fullName>Design</fullName>
            </value>
            <value>
                <fullName>External Factor</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Not known</fullName>
            </value>
            <value>
                <fullName>Not required</fullName>
            </value>
            <value>
                <fullName>Operation</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Procuremen</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>