force-app/main/default/objects/NAM__c/fields/Safety__c.field-meta.xml
<CustomField>
    <fullName>Safety__c</fullName>
    <label>People</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No injury</fullName>
            </value>
            <value>
                <fullName>Slight injury</fullName>
            </value>
            <value>
                <fullName>Minor injury</fullName>
            </value>
            <value>
                <fullName>Major injury</fullName>
            </value>
            <value>
                <fullName>Single fatality</fullName>
            </value>
            <value>
                <fullName>Lost time injury</fullName>
                <isActive>false</isActive>
                <label>Lost time injury</label>
            </value>
            <value>
                <fullName>Multiple facilities</fullName>
                <isActive>false</isActive>
                <label>Multiple facilities</label>
            </value>
            <value>
                <fullName>Multiple fatalities</fullName>
                <isActive>false</isActive>
                <label>Multiple fatalities</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>