force-app/main/default/objects/NAM__c/fields/ServiceMdBAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceMdBAmount__c</fullName>
    <label>Service MdB Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>