force-app/main/default/objects/NAM__c/fields/ServiceMIIAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceMIIAmount__c</fullName>
    <label>Service MII Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>