force-app/main/default/objects/NAM__c/fields/ServiceMINCAmount__c.field-meta.xml
<CustomField>
    <fullName>ServiceMINCAmount__c</fullName>
    <label>Service MINC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>