force-app/main/default/objects/NAM__c/fields/SeverityRating__c.field-meta.xml
<CustomField>
    <fullName>SeverityRating__c</fullName>
    <formula>0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Severity Rating</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>