force-app/main/default/objects/NAM__c/fields/SkipEM__c.field-meta.xml
<CustomField>
    <fullName>SkipEM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip EM</label>
    <type>Checkbox</type>
</CustomField>