force-app/main/default/objects/NAM__c/fields/SPCPartnersVisible__c.field-meta.xml
<CustomField>
    <fullName>SPCPartnersVisible__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SPC Partners Visible</label>
    <type>Checkbox</type>
</CustomField>