force-app/main/default/objects/NAM__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AMC</fullName>
                <default>true</default>
                <label>AMC</label>
            </value>
            <value>
                <fullName>OM</fullName>
            </value>
            <value>
                <fullName>PEM</fullName>
            </value>
            <value>
                <fullName>Tech Team</fullName>
            </value>
            <value>
                <fullName>SPC Partners</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>SPC Modec</fullName>
                <isActive>false</isActive>
                <label>SPC Modec</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>