force-app/main/default/objects/NAM__c/fields/SubSystemNumber__c.field-meta.xml
<CustomField>
    <fullName>SubSystemNumber__c</fullName>
    <label>SubSystem Number</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>SystemNumber__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Mooring Chan / Wire / Rope &amp; Fairlead</fullName>
                <label>Mooring Chain / Wire / Rope &amp; Fairlead</label>
            </value>
            <value>
                <fullName>Chain Handling / Chain Jack / Chain Stoppers - FWD</fullName>
            </value>
            <value>
                <fullName>Chain Handling / Chain Jack / Chain Stoppers - AFT</fullName>
            </value>
            <value>
                <fullName>Riser Pull-in Winch</fullName>
            </value>
            <value>
                <fullName>Riser Pull-in Equipment</fullName>
            </value>
            <value>
                <fullName>Inlet Oil Production</fullName>
            </value>
            <value>
                <fullName>Crude Oil Treating / Stabilization</fullName>
            </value>
            <value>
                <fullName>Flowline Circulation System</fullName>
            </value>
            <value>
                <fullName>Produced Water Treatment System</fullName>
            </value>
            <value>
                <fullName>Seawater Treatment &amp; Distribution</fullName>
            </value>
            <value>
                <fullName>Seawater Injection Pumps</fullName>
            </value>
            <value>
                <fullName>Inlet Gas Production / Lift / Export / Import / Injection</fullName>
            </value>
            <value>
                <fullName>Vapor Recovery Unit</fullName>
            </value>
            <value>
                <fullName>Main Gas Compression - A</fullName>
            </value>
            <value>
                <fullName>Gas Dehydration &amp; Regeneration</fullName>
            </value>
            <value>
                <fullName>Gas Compression (GI)</fullName>
            </value>
            <value>
                <fullName>Main Gas Compression - B</fullName>
            </value>
            <value>
                <fullName>HP Flare System</fullName>
            </value>
            <value>
                <fullName>Carcass Vent</fullName>
            </value>
            <value>
                <fullName>Fuel Gas System</fullName>
            </value>
            <value>
                <fullName>Gas Lift Compression</fullName>
            </value>
            <value>
                <fullName>Chemical Injection Tank - A</fullName>
            </value>
            <value>
                <fullName>Chemical Injection Tank - B</fullName>
            </value>
            <value>
                <fullName>Closed Drain System</fullName>
            </value>
            <value>
                <fullName>Open Drain System</fullName>
            </value>
            <value>
                <fullName>Heating Medium System</fullName>
            </value>
            <value>
                <fullName>PIP Heating System</fullName>
            </value>
            <value>
                <fullName>Cooling Medium System</fullName>
            </value>
            <value>
                <fullName>Process Inert Gas (N2)</fullName>
            </value>
            <value>
                <fullName>Diesel Generator - 1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>