force-app/main/default/objects/NAM__c/fields/SystemNumber__c.field-meta.xml
<CustomField>
    <fullName>SystemNumber__c</fullName>
    <label>System Number</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>06 - Mooring System Mechanical Component</fullName>
            </value>
            <value>
                <fullName>07 - Mooring System Component</fullName>
            </value>
            <value>
                <fullName>08 - Installation Aids</fullName>
            </value>
            <value>
                <fullName>10 - Inlet Oil Production</fullName>
            </value>
            <value>
                <fullName>11 - Crude Oil Treating/Stabilization</fullName>
            </value>
            <value>
                <fullName>12 - Flowline Circulation</fullName>
            </value>
            <value>
                <fullName>14 - Produced Water Treatment</fullName>
            </value>
            <value>
                <fullName>15 - Seawater Treatment &amp; Injection</fullName>
            </value>
            <value>
                <fullName>21 - Vapor Recovery Unit</fullName>
            </value>
            <value>
                <fullName>20 - Inlet Gas Production/Gas Lift/Gas Export/Gas Import/Gas Injection</fullName>
            </value>
            <value>
                <fullName>22 - Main Gas Compression</fullName>
            </value>
            <value>
                <fullName>23 - Gas Dehydration &amp; Regeneration</fullName>
            </value>
            <value>
                <fullName>24 - Gas Compression (GI)</fullName>
            </value>
            <value>
                <fullName>30 - Flare &amp; Vent</fullName>
            </value>
            <value>
                <fullName>31 - Fuel Gas System - General</fullName>
            </value>
            <value>
                <fullName>33 - Chemical Injection</fullName>
            </value>
            <value>
                <fullName>34 - Closed/Open Drain System</fullName>
            </value>
            <value>
                <fullName>35 - Heat Medium</fullName>
            </value>
            <value>
                <fullName>36 - Cooling Medium</fullName>
            </value>
            <value>
                <fullName>37 - Process Inert Gas (N2)</fullName>
            </value>
            <value>
                <fullName>40 - Power Generation</fullName>
            </value>
            <value>
                <fullName>41 - Fuel System - Marine</fullName>
            </value>
            <value>
                <fullName>42 - Seawater System</fullName>
            </value>
            <value>
                <fullName>43 - Steam &amp; Condensate System</fullName>
            </value>
            <value>
                <fullName>44 - Potable &amp; Fresh Water System</fullName>
            </value>
            <value>
                <fullName>45-Compressed(Utility &amp; Instrument)Air</fullName>
            </value>
            <value>
                <fullName>46 - Lube Oil System</fullName>
            </value>
            <value>
                <fullName>47 - Bilge System</fullName>
            </value>
            <value>
                <fullName>50 - Life Saving &amp; Emergency Rescue</fullName>
            </value>
            <value>
                <fullName>51 - E/R</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>