force-app/main/default/objects/NAM__c/fields/TechFinalComment__c.field-meta.xml
<CustomField>
    <fullName>TechFinalComment__c</fullName>
    <label>Tech Final Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>