force-app/main/default/objects/NAM__c/fields/TechSpc__c.field-meta.xml
<CustomField>
    <fullName>TechSpc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech SPC</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMs3</relationshipName>
    <type>Lookup</type>
</CustomField>