force-app/main/default/objects/NAM__c/fields/TechSpcCO__c.field-meta.xml
<CustomField>
    <fullName>TechSpcCO__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tech SPC (CO)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>NAMs2</relationshipName>
    <type>Lookup</type>
</CustomField>