force-app/main/default/objects/NAM__c/fields/TechTeamApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>TechTeamApprovalDate__c</fullName>
    <label>Tech Team Approval Date</label>
    <type>Date</type>
</CustomField>