force-app/main/default/objects/NAM__c/fields/TechTeamClosedOutApprovalDate__c.field-meta.xml
<CustomField>
    <fullName>TechTeamClosedOutApprovalDate__c</fullName>
    <label>Tech Team Closed Out Approval Date</label>
    <type>Date</type>
</CustomField>