force-app/main/default/objects/NAM__c/fields/TotalActualAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalActualAmount__c</fullName>
    <label>Total Actual Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>