force-app/main/default/objects/NAM__c/fields/TotalApprovedAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalApprovedAmount__c</fullName>
    <formula>MIIAmount__c + MINCAmount__c + MdBAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Approved Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>