force-app/main/default/objects/NAM__c/fields/TotalBalance__c.field-meta.xml
<CustomField>
    <fullName>TotalBalance__c</fullName>
    <formula>BalanceMdB__c + BalanceMII__c + BalanceMINC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>