force-app/main/default/objects/NAM__c/fields/TotalBalanceAlert__c.field-meta.xml
<CustomField>
    <fullName>TotalBalanceAlert__c</fullName>
    <formula>IF(
TotalBalance__c &lt;= -20000,
IMAGE( &quot;/resource/TotalBalanceFlag&quot;,&quot;Total &gt;20K&quot;, 25,25), &quot;---&quot;)</formula>
    <inlineHelpText>Total Balance &gt;20K</inlineHelpText>
    <label>Total Balance Alert</label>
    <type>Text</type>
</CustomField>