force-app/main/default/objects/NAM__c/fields/TotalClosedOutSupportedPending__c.field-meta.xml
<CustomField>
    <fullName>TotalClosedOutSupportedPending__c</fullName>
    <label>Total Closed Out Supported Pending</label>
    <summaryFilterItems>
        <field>TechnicalMemberSupport__c.Type__c</field>
        <operation>equals</operation>
        <value>Closed Out</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TechnicalMemberSupport__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending</value>
    </summaryFilterItems>
    <summaryForeignKey>TechnicalMemberSupport__c.NAM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>