force-app/main/default/objects/NAM__c/fields/TotalMaterialAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalMaterialAmount__c</fullName>
    <formula>MaterialMdBAmount__c +  MaterialMINCAmount__c + MaterialMIIAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Material Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>