force-app/main/default/objects/NAM__c/fields/TotalServiceAmount__c.field-meta.xml
<CustomField>
    <fullName>TotalServiceAmount__c</fullName>
    <formula>ServiceMdBAmount__c +  ServiceMINCAmount__c + ServiceMIIAmount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Service Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>