force-app/main/default/objects/NAM__c/fields/TotalSupportedPending__c.field-meta.xml
<CustomField>
    <fullName>TotalSupportedPending__c</fullName>
    <label>Total Supported Pending</label>
    <summaryFilterItems>
        <field>TechnicalMemberSupport__c.Status__c</field>
        <operation>equals</operation>
        <value>Pending, Not Supported</value>
    </summaryFilterItems>
    <summaryFilterItems>
        <field>TechnicalMemberSupport__c.Type__c</field>
        <operation>equals</operation>
        <value>NAM</value>
    </summaryFilterItems>
    <summaryForeignKey>TechnicalMemberSupport__c.NAM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>