force-app/main/default/objects/NAM__c/fields/TotalTechTeamSupport__c.field-meta.xml
<CustomField>
    <fullName>TotalTechTeamSupport__c</fullName>
    <label>Total Tech Team Support</label>
    <summaryForeignKey>TechnicalMemberSupport__c.NAM__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>