force-app/main/default/objects/NAM__c/fields/TQ__c.field-meta.xml
<CustomField>
    <fullName>TQ__c</fullName>
    <label>TQ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>