force-app/main/default/objects/NAM__c/fields/TypeEvent__c.field-meta.xml
<CustomField>
    <fullName>TypeEvent__c</fullName>
    <label>Type of Event</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Accident</fullName>
            </value>
            <value>
                <fullName>Mechanical Failure</fullName>
            </value>
            <value>
                <fullName>Wear &amp; Tear</fullName>
            </value>
            <value>
                <fullName>Design Error</fullName>
            </value>
            <value>
                <fullName>Preventive</fullName>
            </value>
            <value>
                <fullName>Upgrade/Modification</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>