force-app/main/default/objects/NAM__c/fields/VesselShortName__c.field-meta.xml
<CustomField>
    <fullName>VesselShortName__c</fullName>
    <formula>Vessel__r.ShortName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vessel Short Name</label>
    <type>Text</type>
</CustomField>