force-app/main/default/objects/NAM__c/recordTypes/NAM_For_Info_WCN.recordType-meta.xml
<RecordType>
    <fullName>NAM_For_Info_WCN</fullName>
    <active>true</active>
    <label>NAM - For Info WCN</label>
</RecordType>