force-app/main/default/objects/NAM__c/recordTypes/NamForApproval.recordType-meta.xml
<RecordType>
    <fullName>NamForApproval</fullName>
    <active>true</active>
    <label>NAM - For Approval</label>
</RecordType>