force-app/main/default/objects/NAM__c/recordTypes/NamForInfo.recordType-meta.xml
<RecordType>
    <fullName>NamForInfo</fullName>
    <active>true</active>
    <label>NAM - For Info</label>
</RecordType>