force-app/main/default/objects/NAM__c/validationRules/CancelRule.validationRule-meta.xml
<ValidationRule>
    <fullName>CancelRule</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISPICKVAL(Status__c, &apos;Cancelled&apos;), ISBLANK( CancelReason__c))</errorConditionFormula>
    <errorDisplayField>CancelReason__c</errorDisplayField>
    <errorMessage>You must inform the Cancel Reason to Cancel a NAM</errorMessage>
</ValidationRule>