force-app/main/default/objects/NAM__c/validationRules/issueDate.validationRule-meta.xml
<ValidationRule>
    <fullName>issueDate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(OR(ISCHANGED(IssueDate__c), ISNEW()), IssueDate__c &lt; TODAY())</errorConditionFormula>
    <errorDisplayField>IssueDate__c</errorDisplayField>
    <errorMessage>The &apos;Issue Date&apos; can not be in the past</errorMessage>
</ValidationRule>