force-app/main/default/objects/NAM__c/validationRules/TechResponsibleClosedOut.validationRule-meta.xml
<ValidationRule>
    <fullName>TechResponsibleClosedOut</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(ResponsibleForClosedOut__c)), 
     ISCHANGED(ResponsibleForClosedOut__c),  
     TEXT( ClosedOutStatus__c ) &lt;&gt; &apos;Tech Team&apos;
)</errorConditionFormula>
    <errorDisplayField>ResponsibleForClosedOut__c</errorDisplayField>
    <errorMessage>You only can change this field on the NAM Tech Team status</errorMessage>
</ValidationRule>