force-app/main/default/objects/NAM__c/validationRules/TechResponsibleNAM.validationRule-meta.xml
<ValidationRule>
    <fullName>TechResponsibleNAM</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT(ISBLANK(ResponsibleForNAM__c)), 
     ISCHANGED(ResponsibleForNAM__c),  
     TEXT(Status__c) &lt;&gt; &apos;Tech Team&apos;
)</errorConditionFormula>
    <errorDisplayField>ResponsibleForNAM__c</errorDisplayField>
    <errorMessage>You only can change this field on the NAM Tech Team status</errorMessage>
</ValidationRule>