force-app/main/default/objects/NAM__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>IssueDate__c</columns>
    <columns>Vessel__c</columns>
    <columns>Status__c</columns>
    <columns>Subject__c</columns>
    <columns>SystemNumber__c</columns>
    <columns>ApprovedCost__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>