force-app/main/default/objects/NAM__c/listViews/EngineeringManager_NAM.listView-meta.xml
<ListView>
    <fullName>EngineeringManager_NAM</fullName>
    <filterScope>Queue</filterScope>
    <label>Engineering Manager</label>
    <queue>EngineeringManager</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>