force-app/main/default/objects/NAM__c/listViews/NAM_for_Info_Pending.listView-meta.xml
<ListView>
    <fullName>NAM_for_Info_Pending</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>IssueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ClosedOutStatus__c</columns>
    <columns>TypeEvent__c</columns>
    <columns>ProbabilityRating__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>NAM__c.NamForInfo,NAM__c.NAM_For_Info_WCN</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>AMC,OM,PEM,Tech Team,SPC Partners</value>
    </filters>
    <label>NAM for Info - Pending</label>
</ListView>