force-app/main/default/objects/NAM__c/listViews/NAMAllApproved.listView-meta.xml
<ListView>
    <fullName>NAMAllApproved</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>IssueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ClosedOutStatus__c</columns>
    <columns>TypeEvent__c</columns>
    <columns>ProbabilityRating__c</columns>
    <columns>TotalBalanceAlert__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ClosedOutStatus__c</field>
        <operation>equals</operation>
        <value>Approved</value>
    </filters>
    <label>NAM All - Approved</label>
</ListView>