force-app/main/default/objects/NAM__c/listViews/NAMClosedOutMV29Pending.listView-meta.xml
<ListView>
    <fullName>NAMClosedOutMV29Pending</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>IssueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ClosedOutStatus__c</columns>
    <columns>TypeEvent__c</columns>
    <columns>ProbabilityRating__c</columns>
    <columns>TotalBalanceAlert__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV29</value>
    </filters>
    <filters>
        <field>ClosedOutStatus__c</field>
        <operation>equals</operation>
        <value>Execution,EM,PEM,Tech Team,SPC Partners</value>
    </filters>
    <label>NAM Closed Out MV29  - Pending</label>
</ListView>