force-app/main/default/objects/NAM__c/listViews/NAMMV26Pending.listView-meta.xml
<ListView>
    <fullName>NAMMV26Pending</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>Subject__c</columns>
    <columns>IssueDate__c</columns>
    <columns>Status__c</columns>
    <columns>ClosedOutStatus__c</columns>
    <columns>TypeEvent__c</columns>
    <columns>ProbabilityRating__c</columns>
    <columns>OWNER.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>VesselShortName__c</field>
        <operation>equals</operation>
        <value>MV26</value>
    </filters>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>AMC,OM,PEM,Tech Team,SPC Partners</value>
    </filters>
    <label>NAM MV 26 - Pending</label>
</ListView>